--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,24 +1,10 @@
-# Maven package Java project Web App to Linux on Azure
-# Build your Java project and deploy it to Azure as a Linux web app
-# Add steps that analyze code, save build artifacts, deploy, and more:
-# https://docs.microsoft.com/azure/devops/pipelines/languages/java
-
 trigger:
 - main
 
 variables:
-
-  # Azure Resource Manager connection created during pipeline creation
   azureSubscription: '554ceada-6ce3-4200-8f0e-cfbe286bfbe1'
-
-  # Web app name
   webAppName: 'java7095'
-
-  # Environment name
   environmentName: 'java7095'
-
-  # Agent VM image name
-  vmImageName: 'ubuntu-latest'
 
 stages:
 - stage: Build
@@ -27,7 +13,7 @@ stages:
   - job: MavenPackageAndPublishArtifacts
     displayName: Maven Package and Publish Artifacts
     pool:
-      vmImage: $(vmImageName)
+      name: 'NAVEEN'   # 👈 Self-hosted agent name
 
     steps:
     - task: Maven@4
@@ -36,7 +22,7 @@ stages:
         mavenPomFile: 'pom.xml'
         mavenOptions: '-Xmx3072m'
         javaHomeOption: 'JDKVersion'
-        jdkVersionOption: '1.17' 
+        jdkVersionOption: '1.17'
         jdkArchitectureOption: 'x64'
         publishJUnitResults: true
         testResultsFiles: '**/surefire-reports/TEST-*.xml'
@@ -61,7 +47,8 @@ stages:
     displayName: Deploy Linux Web App
     environment: $(environmentName)
     pool:
-      vmImage: $(vmImageName)
+      name: 'NAVEEN'   # 👈 Self-hosted agent name again
+
     strategy:
       runOnce:
         deploy:
