--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,7 +13,7 @@ stages:
   - job: MavenPackageAndPublishArtifacts
     displayName: Maven Package and Publish Artifacts
     pool:
-      name: 'NAVEEN'   # 👈 Self-hosted agent name
+      name: 'default'   # 👈 Self-hosted agent name
 
     steps:
     - task: Maven@4
