--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,17 +7,21 @@ variables:
   environmentName: 'java7095'
 
 stages:
+
+# ------------------- BUILD STAGE -------------------
 - stage: Build
-  displayName: Build stage
+  displayName: "Build stage"
   jobs:
   - job: MavenPackageAndPublishArtifacts
-    displayName: Maven Package and Publish Artifacts
+    displayName: "Maven Package and Publish Artifacts"
     pool:
-      name: 'Default'   # 👈 Self-hosted agent name
+      name: Default
+      demands:
+        - Agent.Name -equals selft-hosted   # 👈 MUST HAVE
 
     steps:
     - task: Maven@4
-      displayName: 'Maven Package'
+      displayName: "Maven Package"
       inputs:
         mavenPomFile: 'pom.xml'
         mavenOptions: '-Xmx3072m'
@@ -29,7 +33,7 @@ stages:
         goals: 'clean package'
 
     - task: CopyFiles@2
-      displayName: 'Copy Files to artifact staging directory'
+      displayName: "Copy JAR/WAR to staging"
       inputs:
         SourceFolder: '$(System.DefaultWorkingDirectory)'
         Contents: '**/target/*.?(war|jar)'
@@ -38,25 +42,29 @@ stages:
     - upload: $(Build.ArtifactStagingDirectory)
       artifact: drop
 
+
+# ------------------- DEPLOY STAGE -------------------
 - stage: Deploy
-  displayName: Deploy stage
+  displayName: "Deploy stage"
   dependsOn: Build
   condition: succeeded()
   jobs:
   - deployment: DeployLinuxWebApp
-    displayName: Deploy Linux Web App
+    displayName: "Deploy to Azure Web App"
     environment: $(environmentName)
     pool:
-      name: 'Default'   # 👈 Self-hosted agent name again
+      name: Default
+      demands:
+        - Agent.Name -equals selft-hosted   # 👈 MUST HAVE
 
     strategy:
       runOnce:
         deploy:
           steps:
           - task: AzureWebApp@1
-            displayName: 'Azure Web App Deploy: java7095'
+            displayName: "Azure Web App Deploy: java7095"
             inputs:
               azureSubscription: $(azureSubscription)
               appType: webAppLinux
               appName: $(webAppName)
-              package: '$(Pipeline.Workspace)/drop/**/target/*.?(war|jar)'
+              package: '$(Pipeline.Workspace)/drop/**/*.?(war|jar)'
